kubernetes/core/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: our-first-pod
  labels:
    env: development
spec:
  containers:
  - name: colors
    image: ghcr.io/infralovers/colors_app:2.4.1
    ports:
      - containerPort: 8080
