kubernetes/core/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my_service
spec:
  type: ClusterIP
  selector:
    app: colors
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
